--- a/client/app/overview/overview.html
+++ b/client/app/overview/overview.html
@@ -1,17 +1,16 @@
+<div ng-include="'components/navbar/navbar.html'"></div>
+
 <div class="container">
     <div class="header-container col-lg-12">
       <h1 class="page-header">Overview</h1>
       <div class="album-overview  col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="album in albums">
         <div class="inner-content">
           <div class="image-container">
-            <a ui-sref="albumDetail({id:album._id})"><img src="http://images.rapgenius.com/180ec864a554a1ebdc8cd21979b5a4c8.1000x1000x1.jpg"></a>
+            <a ui-sref="albumDetail({id : album._id})"><img ng-src="{{album.cover}}"></a>
           </div>
           <div class="text-container">
             <p>{{album.albumtitle}}</p>
             <p>{{album.artist}}</p>
-            <!--<h2><a ui-sref="whiskyDetail({id:whisky._id})">{{whisky.name}}</a></h2>-->
-            <h3 ng-show="album.upvotes"><uib-rating ng-model="album.upvotes" max="5" readonly="true"></uib-rating> - ({{whisky.comments.length}}
-              {{whisky.comments.length == 1 ? "rating" : "ratings"}})</h3>
           </div>
         </div>
       </div>
