--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/albumDetail/albumDetail.controller.js"></script>
+          <script src="app/albumDetail/albumDetail.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/overview/overview.controller.js"></script>
