--- a/client/app/albumDetail/albumDetail.html
+++ b/client/app/albumDetail/albumDetail.html
@@ -32,16 +32,13 @@
         </div>
         <form class="form" name="form" ng-submit="addComment(comment)" novalidate>
           <div class="form-group" show-errors>
-            <div class="form-title-container delete-padding col-lg-8 col-md-8 col-sm-8 col-xs-8">
+            <div class="form-title-container col-lg-8 col-md-8 col-sm-8 col-xs-8">
               <input name="title" type="text" ng-model="comment.title" placeholder="Title" class="form-control
                " required/>
                <p class="help-block" ng-if="form.title.$error.required">Title is required</p>
             </div>
-            <uib-rating class="comment-rating col-lg-4 col-md-4 col-sm-4 col-xs-4" ng-model="comment.rating" max="5"
-              readonly="false" on-leave="overStar = null">
-            </uib-rating>
           </div>
-          <div class="form-review-container form-group" show-errors>
+          <div class="form-review-container form-group col-lg-8 col-md-8 col-sm-8 col-xs-8" show-errors>
             <textarea name="body" type="text" ng-model="comment.body" placeholder="Review" class="form-control" required/>
             <p class="help-block" ng-if="form.body.$error.required">Review is required</p>
           </div>
