update & delete album

--- a/client/index.html
+++ b/client/index.html
@@ -72,6 +72,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/albumDetail/albumDetail.controller.js"></script>
           <script src="app/albumDetail/albumDetail.js"></script>
+          <script src="app/albums/albums.controller.js"></script>
+          <script src="app/albums/albums.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/overview/overview.controller.js"></script>
