--- a/client/app/albums/albums.html
+++ b/client/app/albums/albums.html
@@ -1,29 +1,62 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
+  <div>
+    <a ng-click="create()" class="edit"><span class="glyphicon glyphicon-plus pull-right"></span></a>
+</div>
+  </div>
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="album in albums">
       <div>
-        <strong>{{album.title}}</strong><br>
+        <strong>{{album.albumtitle}}</strong><br>
         <span class="text-muted">{{album.artist}}</span>
         <a ng-click="delete(album)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-        <a ng-click="albumdDetails(album)" class="edit"><span class="glyphicon glyphicon-pencil pull-right"></span></a>
+        <a ng-click="albumdDetails(album)"><span class="glyphicon glyphicon-pencil pull-right"></span></a>
       </div>
-        <span ng-hide="showed" class="details">
-          <form class="form" name="form" ng-submit="register(form)" novalidate>
+        <span ng-show="showed" class="details ">
+          <hr>
+          <form name="form" class="form-horizontal" ng-submit="update(album,form)" novalidate>
 
-            <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
-                                                'has-error': form.name.$invalid && submitted }">
-              <label>Title</label>
-
-              <input type="text" name="name" ng-placeholder="{{album.title}}"  ng-model="album.title"
-                     required/>
-              <p class="help-block" ng-show="form.name.$error.required && submitted">
-                A name is required
-              </p>
+            <div class="form-group" ng-class="{ 'has-success': form.albumtitle.$valid && submitted,'has-error': form.albumtitle.$invalid && submitted }">
+              <label class="col-sm-2 control-label">Title:</label>
+              <div>
+              <input type="text" class="form-control" name="titel" placeholder="{{album.albumtitle}}" ng-model="form.albumtitle"/>
+              </div>
             </div>
 
+            <div class="form-group" ng-class="{ 'has-success': form.artist.$valid && submitted,'has-error': form.artist.$invalid && submitted }">
+              <label class="col-sm-2 control-label">Artist:</label>
+              <div>
+                <input type="text" class="form-control" name="albumartist" placeholder="{{album.artist}}" ng-model="form.artist"/>
+              </div>
+            </div>
 
+            <div class="form-group" ng-class="{ 'has-success': form.released_at.$valid && submitted,'has-error': form.released_at.$invalid && submitted }">
+              <label class="col-sm-2 control-label">Released at:</label>
+              <div>
+                <input type="text" class="form-control" name="releasedate" placeholder="{{album.released_at}}" ng-model="form.released_at"/>
+              </div>
+            </div>
+
+            <div class="form-group" ng-class="{ 'has-success': form.genre.$valid && submitted,'has-error': form.genre.$invalid && submitted }">
+              <label class="col-sm-2 control-label">Genre:</label>
+              <div>
+                <input type="text" class="form-control" name="style" placeholder="{{album.genre}}" ng-model="form.genre"/>
+              </div>
+            </div>
+            <div class="form-group" ng-class="{ 'has-success': form.cover.$valid && submitted,'has-error': form.cover.$invalid && submitted }">
+              <label class="col-sm-2 control-label">Cover</label>
+              <div>
+                <input type="text" class="form-control" name="linkcover" placeholder="{{album.cover}}" ng-model="form.cover"/>
+              </div>
+            </div>
+
+            <div class="form-group" ng-class="{ 'has-success': form.description.$valid && submitted,'has-error': form.description.$invalid && submitted }">
+              <label class="col-sm-2 control-label">Description:</label><br><br>
+              <div>
+                <textarea name="descrip" placeholder="{{album.description}}" ng-model="form.description"></textarea>
+              </div>
+            </div>
 
             <div>
               <button class="btn btn-inverse btn-lg btn-login" type="submit">
