--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,8 @@
           <script src="app/albumDetail/albumDetail.js"></script>
           <script src="app/albums/albums.controller.js"></script>
           <script src="app/albums/albums.js"></script>
+          <script src="app/createAlbum/createAlbum.controller.js"></script>
+          <script src="app/createAlbum/createAlbum.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/overview/overview.controller.js"></script>
